--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         }
 
         #syntax {
+            display: none;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             color: #fff;
             border-radius: 7px;
@@ -120,6 +121,10 @@
         #syntaxEx {
             font-size: 1em;
         }
+
+        #onlyTitle p {
+            display: inline;
+        }
     </style>
 </head>
 
@@ -127,8 +132,7 @@
     <div id="top">
         <span id="title">Markdown to HTML Converter</span>
         <br>
-        <span id="onlyTitle" class="mdTxt">Currently there is only: **bold**, *italic*, and ***important*** text. More
-            Coming Soon.</span>
+        <!--<span id="onlyTitle" class="mdTxt">Currently there is only: **bold**, *italic*, and ***important*** text. More Coming Soon.</span>-->
     </div>
     <div id="holder">
         <div id="holder2">
@@ -145,7 +149,8 @@
                 onclick="downloadHTML(document.getElementById('htmlTxt').value)">Download
                 HTML</button><a style="display: none;" id="downloadBtnA"></a>
             <div id="htmlDisplay">
-                <iframe id="htmlDisplayFrame" style="border: none;" width="720" height="480"></iframe>
+                <iframe id="htmlDisplayFrame" style="border: none; background-color: #fff;" width="720"
+                    height="480"></iframe>
             </div>
         </div>
     </div>
@@ -153,9 +158,10 @@
         <h1 id="syntaxHeader" onmouseout="checkSyntaxMenu('out')" onmouseover="checkSyntaxMenu('hover')"
             onclick="checkSyntaxMenu('click')">Syntax</h1>
         <span id="syntaxEx">**Bold Text** - <b>Bold Text</b><br>__Bold Text__ - <b>Bold Text</b><br>*Italic Text* -
-            <i>Italic Text</i><br>_Italic Text_ - <i>Italic Text</i><br>***Important Text*** - <b><i>Important Text</i></b><br>___Important Text___ - <b><i>Important Text</i></b><br></span>
+            <i>Italic Text</i><br>_Italic Text_ - <i>Italic Text</i><br>***Important Text*** - <b><i>Important
+                    Text</i></b><br>___Important Text___ - <b><i>Important Text</i></b><br></span>
     </div>
-    <script src="/js/data.js"></script>
+    <script src="/js/api.min.js"></script>
     <script src="/js/index.js"></script>
 </body>
 
